--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "homepage": "http://wiwo.one/snake-game/",
   "dependencies": {
-    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^9.6.3",
     "framer-motion": "^4.1.17",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^5.0.0",
     "use-http": "^1.0.24",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "TAILWIND_MODE=watch craco start",
+    "serve": "react-scripts start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
@@ -32,10 +33,20 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "prettier": "^2.3.2",
-    "prettier-plugin-tailwind": "^2.2.12",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
